# nextjs-fastapi-postgres-starter

./: .pre-commit-config.yaml  README.md  docker-compose.yml  makefile
backend/: pyproject.toml  ruff.toml
backend/docker/: Dockerfile
backend/src/: log_conf.yaml  main.py
backend/src/db/: db_engine.py
backend/src/db/models/: models.py
backend/src/routes/: conversations.py  users.py
backend/src/schemas/: conversations.py  messages.py  users.py
backend/src/utils/: custom_logging.py  db_utils.py
frontend/: next.config.mjs  package-lock.json  package.json
frontend/app/: page.tsx  types.ts
frontend/app/components/: ConversationDisplay.tsx  MessageInput.tsx
